# Chess

./: .gitignore  AI.cpp  CMakeLists.txt  Makefile  README.md  run
source/: AI.cpp  AI.h  BaseAI.cpp  BaseAI.h  Board.cpp  Board.h  BoardMove.cpp  BoardMove.h  Heuristics.cpp  Heuristics.h  Move.cpp  Move.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Timer.cpp  Timer.h  game.cpp  main.cpp  vec2.h
source/sexp/: Makefile
